--- a/appraisal_data_marcus.ipynb
+++ b/appraisal_data_marcus.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data lookup and sampling\n",
+    "---\n",
+    "\n",
+    "We would like to look through the original files of data to find out what data types and shapes, and then sample a data set by merging two sampled set of data on 'ACCOUNT_NUM' to see what happens after merging them."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -14,8 +24,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Starting from Y2020 data, we are going to read the csv files to make each dataframe, finding the data types and shapes."
+   ]
+  },
+  {
    "cell_type": "code",
-
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +167,6 @@
        "4         COM    OFFICE/SHOWROOM  "
       ]
      },
-
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1831,20 +1847,6 @@
    "source": [
     "df_inner.to_csv('output_inner.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1863,7 +1865,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
